Maven build cleanup, removed deprecated v1 client and serdes, disabled connector temporarily